crates/common/tedge_config_engine/macro/tests/compile_fail/derive_fn_returns_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/derive_fn_returns_wrong_type.rs:14:79
   |
14 |             #[tedge_config(default(from_key_via(key = "mqtt.port", function = "next_port")))]
   |                                                                               ^^^^^^^^^^^
   |                                                                               |
   |                                                                               expected fn pointer, found fn item
   |                                                                               arguments to this function are incorrect
   |
   = note: expected fn pointer `for<'a> fn(&'a str) -> std::result::Result<std::option::Option<u16>, std::string::String>`
                 found fn item `for<'a> fn(&'a str) -> std::result::Result<std::option::Option<std::string::String>, std::string::String> {next_port}`
note: function defined here
  --> $WORKSPACE/crates/common/tedge_config_engine/src/defaults.rs
   |
   | pub fn derive_to_string<T: std::fmt::Display>(
   |        ^^^^^^^^^^^^^^^^
